<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/collegelogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/lambtonclg"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColorHint="#10877B"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:hint="@string/enter_student_name"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/graduated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/graduated"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/ungraduated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/un_graduated"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/courselayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_3sdp"
                android:orientation="horizontal"
                android:background="@drawable/spinner_bg"
                tools:ignore="UselessParent">

                <Spinner
                    android:id="@+id/coursespin"
                    android:layout_width="match_parent"
                    android:minHeight="@dimen/_35sdp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_9sdp"
                android:layout_marginTop="-5dp"
                android:background="@color/white"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingRight="@dimen/_3sdp"
                android:text="@string/select_course"
                android:textColor="@color/colorPrimaryDark" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginTop="@dimen/_5sdp"
            >
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_hr"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/hours_val"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:textColorHint="#000000"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/fees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_fee"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/fees_val"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:textColorHint="#000000"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />
            <CheckBox
                android:id="@+id/accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accommodation"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <CheckBox
                android:id="@+id/medical_insurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_insurance"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
        </LinearLayout>

        <Button
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/register"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/totalhours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_hours"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/total_hours_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textColorHint="#000000"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/totalfees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_fees"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/total_fees_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textColorHint="#000000"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>
        <TextView
            android:id="@+id/lab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColorHint="@color/red"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <RelativeLayout
            android:id="@+id/courseout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_3sdp"
                android:orientation="horizontal"
                android:background="@drawable/spinner_bg"
                tools:ignore="UselessParent">

                <Spinner
                    android:id="@+id/selectedcourse"
                    android:layout_width="match_parent"
                    android:minHeight="@dimen/_35sdp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_9sdp"
                android:layout_marginTop="-5dp"
                android:background="@color/white"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingRight="@dimen/_3sdp"
                android:text="@string/select_course"
                android:textColor="@color/colorPrimaryDark" />
        </RelativeLayout>

        <Button
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/remove"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            android:text="@string/remove"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    </LinearLayout>
</ScrollView>